--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dayjs": "^1.11.11",
     "echarts": "^5.5.0",
     "pinia": "^2.1.7",
+    "pnpm": "^9.6.0",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
